--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,c++
+to_be_ignore.txt
